--- a/now.json
+++ b/now.json
@@ -2,9 +2,15 @@
   "version": 2,
   "name": "aham",
   "alias": ["schrammel.co", "uhul"],
-  "builds": [{ "src": "web/package.json", "use": "@now/next" }],
+  "builds": [
+    { "src": "web/package.json", "use": "@now/next" },
+    { "src": "services/**/*.go", "use": "@now/go" }
+  ],
   "routes": [
-    { "src": "/w", "dest": "ws://ilikebread.herokuapp.com/w" },
+    {
+      "src": "/whatsapp/send",
+      "dest": "services/handlers/sendMessage.go"
+    },
     { "src": "(.*)", "dest": "web$1" }
   ],
   "env": {
